[package]
name = "sweettest_utils"
version = "0.0.127"
edition = "2021"

[lib]
name = "sweettest_utils"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0", default-features = false }
colored = { version = "2.0", default-features = false }
futures = { version = "0.3", default-features = false }
tokio = { version = "1.3", features = [ "full" ] }
once_cell = { version = "1.10", default-features = false }
stream-cancel = { version = "0.8.0", default-features = false }


holochain = { version = "0.0.127", default-features = false, features = ["test_utils"]  }
holochain_types = { version = "0.0.27", default-features = false }
holochain_zome_types = { version = "0.0.25", default-features = false }
holochain_state = { version = "0.0.27", default-features = false }
holochain_p2p = { version = "0.0.27", default-features = false }
holo_hash = { version = "0.0.20", default-features = false, features = ["encoding"] }
